# Nex

./: .breakpoints  .cache  README.md  main.py  mainbank.json  pyproject.toml
cogs/: anime.py  crafts.py  econ.py  econ_db.py  fun.py  github.py  help.py  imdbcog.py  levelling.py  mod.py  music.py  music_old.py  owner.py  utils.py
data/: joke_titles.py  shop.py
utils/: beg.py
